# soft-copyright-generator

./: README.md  build_log.txt  package-lock.json  package.json  pnpm-lock.yaml  vite.config.js
.github/workflows/: release.yml  version-release.yml
scripts/: bump-version.mjs  generate-icons.mjs  tauri-dev.mjs
src/: App.vue
src-tauri/: Cargo.toml  build_error.txt  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  db_connector.rs  lib.rs  main.rs  scanner.rs
src/components/: AiSidebar.vue  GuideTour.vue  SectionEditor.vue  TemplateSelector.vue
src/core/: code-cleaner.js  comment-remover.js  db.js  docx-generator.js  file-sorter.js  global-store.js  ratio-allocator.js
src/core/api-doc/: api-doc-renderer.js  go-parser.js  parser-registry.js  python-parser.js  rust-parser.js  spring-boot-parser.js
src/core/db-doc/: db-doc-renderer.js
src/core/doc-template/: doc-llm-service.js  template-from-doc.js  template-presets.js
src/core/llm/: llm-service.js
src/styles/: index.css
src/views/: AiSettings.vue  ApiDocGenerator.vue  CopyrightGenerator.vue  DbDocGenerator.vue  SddGenerator.vue  SrsGenerator.vue
