[package]
name = "deliver-helper"
version = "0.1.4"
description = "交付助手"
authors = ["chenqi"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "deliver_helper_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2.6.0"
tauri-plugin-fs = "2.4.5"
walkdir = "2.5.0"
encoding_rs = "0.8.35"
glob = "0.3.3"
image = "0.25.9"
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-native-tls", "mysql", "postgres"] }
tokio = { version = "1", features = ["full"] }
tauri-plugin-http = { version = "2", features = ["unsafe-headers"] }
tauri-plugin-store = "2"
reqwest = { version = "0.12", features = ["json", "native-tls"] }
tauri-plugin-sql = { version = "2.3.2", features = ["sqlite"] }

